@@ -14,10 +14,8 @@ HOSTNAME := $(shell if [ $(shell expr $(shell hostname) : '.*\.') != '0' ]; then
 NSISBIN = $(HOME)/local-$(HOSTNAME)/bin
 # Get build date
 BUILDDATE := $(shell date +%Y%m%d)
-# Get revision from sdcc/ChangeLog to append to the build name
-SDCCREVISION = $(shell awk '/^\$$Revision:/ { print $$2 }' $(ORIGDIR)/sdcc/ChangeLog)
 # Stamp to append to the build name
-SNAPSHOTID = $(BUILDDATE)-$(SDCCREVISION)
+SNAPSHOTID = $(BUILDDATE)-$(SDCC_REVISION)
 
 # Path to the directory containing local machine makefiles (<hosatname>.mk)
 # $(HOME)/build/sdcc-build/local is used if the path doesn't exist
@@ -64,7 +62,7 @@ REGTESTLOG = $(REGTESTDIR)/regression-test-$(TARGET_PLATFORM)-$(SNAPSHOTID).log
 # Directory for regression test log file
 CHLOGDIR = $(HTDOCSDIR)/changelog_heads
 # Regression test log file
-CHLOGTXT = $(CHLOGDIR)/changelog-head-$(SDCCREVISION).txt
+CHLOGTXT = $(CHLOGDIR)/changelog-head-$(SDCC_REVISION).txt
 
 CVSFLAGS += -Q
 SVNFLAGS += --force
